<resources>
    <string name="app_name">Online Shop Organizer</string>
    <string name="headline_order_create">Bestellung anlegen</string>
    <string name="headline_order_change">Bestellung ändern</string>
    <string name="headline_order_overview">Übersicht Bestellung</string>
    <string name="headline_trader_create">Händler anlegen</string>
    <string name="headline_shipper_create">Speditionen anlegen</string>
    <string name="toolbar_trader_show">Händler anzeigen</string>
    <string name="toolbar_shipper_show">Speditionen anzeigen</string>
    <string name="headline_trader_change">Händler ändern</string>
    <string name="headline_shipper_change">Speditionen ändern</string>
    <string name="headline_trader_show">Händler anzeigen</string>
    <string name="headline_shipper_show">Speditionen anzeigen</string>
    <string name="headline_order_show">Bestellung anzeigen</string>
    <string name="order_request">Anfrage Bestellung: </string>
    <string name="send_mail">E-Mail versenden</string>
    <string name="no_mail_client">Es konnte leider kein E-Mail-Client gefunden werden!</string>
    <string name="not_able_mail">E-Mail konnte nicht versendet werden</string>
    <string name="no_mail_adress">Keine E-Mail-Adresse vorhanden.</string>
    <string name="headline_trader_overview">Übersicht Händler</string>
    <string name="headline_shipper_overview">Übersicht Speditionen</string>
    <string name="btn_mail">Mail versenden</string>
    <string name="reload_order">Bestellungen aktualisieren</string>
    <string name="save_order">Bestellung speichern</string>
    <string name="save_trader">Händler speichern</string>
    <string name="save_shipper">Spedition speichern</string>
    <string name="create_order">Bestellung erstellen</string>
    <string name="create_trader">Händler erstellen</string>
    <string name="create_shipper">Spedition erstellen</string>
    <string name="no_orders">Keine Bestellungen vorhanden</string>
    <string name="no_trader">Keine Händler vorhanden</string>
    <string name="no_shipper">Keine Speditionen vorhanden</string>
    <string name="manual_tag">manuell</string>
    <string name="name">Name:</string>
    <string name="e_mail">E-Mail:</string>
    <string name="missing_name">Bitte Namen eintragen</string>
    <string name="load_order_failure">Bestellung kann nicht geladen werden!</string>
    <string name="load_shipper_failure">Spedition kann nicht geladen werden!</string>
    <string name="load_trader_failure">Händler kann nicht geladen werden!</string>
    <string name="no_wifi">Keine WLAN-Verbindung vorhanden. Bestellungen wurden nicht synchronsiert!</string>
    <string name="save_error">Fehler beim Sichern!</string>
    <string name="delete_error">Fehler beim Löschen!</string>
    <string name="rly_delete">Möchten Sie die Daten wirklich löschen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="not_saved">Daten wurden noch nicht gesichert.</string>
    <string name="managed_not_editable">Automatische Bestellungen können nicht manuell geändert werden.</string>
    <string name="text_order">Bezeichnung</string>
    <string name="trader">Händler</string>
    <string name="shipper">Spedition</string>
    <string name="order_date">Bestelldatum</string>
    <string name="order_number">Bestellnummer</string>
    <string name="shipping_number">Trackingnummer</string>
    <string name="no_save_trader">Trader wurde bisher nicht gesichert</string>
    <string name="not_managed_trader">Nur automatische Händler können synchronisiert werden.</string>
    <string name="sync_failed">Synchonisation fehlgeschlagen.</string>
    <string name="shipping_state">Versendestatus</string>
    <string name="order_state">Händlerstatus</string>
    <string name="date_incorrect">Datumsformat fehlerhaft!</string>
    <string name="set_time">Datum setzen</string>
    <string name="possible_state_final">Möglicher Status (Final):</string>
    <string name="possible_state">Möglicher Status</string>
    <string name="final_tag">Final?</string>
    <string name="new_state">Neuer Status:</string>
    <string name="add">Hinzufügen</string>
    <string name="remove">Entfernen</string>
    <string name="username">Benutzername:</string>
    <string name="passwort">Passwort:</string>
    <string name="false_mail">E-Mail Format fehlerhaft!</string>
</resources>