<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.shipper_details">

    <Button
        android:id="@+id/btn_new_shipper"
        android:layout_width="309dp"
        android:layout_height="52dp"
        android:text="@string/save_shipper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/text_shipper_name"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_shipper_name"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_state_shipper"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:text="@string/possible_state"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_state_possible_shipper"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:text="@string/new_state"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_state_shipper" />


    <LinearLayout
        android:id="@+id/ll_state_shipper"
        android:layout_width="220dp"
        android:layout_height="370dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/text_shipper_name"
        app:layout_constraintTop_toBottomOf="@+id/text_shipper_name">

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/shipper_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_remove_state_shipper"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:text="@string/remove"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_state_shipper"
        app:layout_constraintStart_toStartOf="@+id/btn_add_state_trader"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_state_shipper" />

    <Button
        android:id="@+id/btn_add_state_shipper"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:text="@string/add"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/text_new_state_shipper"
        app:layout_constraintStart_toEndOf="@+id/cb_final"
        app:layout_constraintTop_toBottomOf="@+id/text_new_state_shipper" />

    <EditText
        android:id="@+id/text_new_state_shipper"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tv_state_possible_shipper"
        app:layout_constraintTop_toBottomOf="@+id/ll_state_shipper" />

</androidx.constraintlayout.widget.ConstraintLayout>