<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_order_details_scene"
    tools:context=".activities.order_details">

    <Button
        android:id="@+id/btn_save_order"
        android:layout_width="309dp"
        android:layout_height="52dp"
        android:text="@string/save_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/text_order_nr"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_order_shipper"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/spinner_order_trader" />

    <Spinner
        android:id="@+id/spinner_order_trader"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/text_order_nr" />

    <Spinner
        android:id="@+id/spinner_order_state"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/spinner_shipping_state" />

    <Spinner
        android:id="@+id/spinner_shipping_state"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/shipping_number" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:text="@string/text_order"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:text="@string/shipper"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:text="@string/trader"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:text="@string/order_number"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:text="@string/order_date"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:text="@string/shipping_number"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:text="@string/shipping_state"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <TextView
        android:id="@+id/textView18"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:text="@string/order_state"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/order_date"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:clickable="true"
        android:ems="10"
        android:inputType="date"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/spinner_order_shipper" />

    <EditText
        android:id="@+id/order_number"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/order_date" />

    <EditText
        android:id="@+id/shipping_number"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/order_number" />


    <TextView
        android:id="@+id/tv_text_order_status"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_order_nr"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_order_trader"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/spinner_order_trader"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_order_status" />

    <TextView
        android:id="@+id/tv_order_shipper"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/spinner_order_shipper"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_trader" />

    <TextView
        android:id="@+id/tv_order_date"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_shipper" />

    <TextView
        android:id="@+id/tv_order_number"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_date" />

    <TextView
        android:id="@+id/tv_shipping_number"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_number" />

    <TextView
        android:id="@+id/tv_shipping_state"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/spinner_shipping_state"
        app:layout_constraintTop_toBottomOf="@+id/tv_shipping_number" />

    <TextView
        android:id="@+id/tv_order_state"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/spinner_order_state"
        app:layout_constraintTop_toBottomOf="@+id/tv_shipping_state" />


</androidx.constraintlayout.widget.ConstraintLayout>